# pos-cafe

./: ReadmeDB.md
frontend/: package-lock.json  package.json
frontend/src/: app.css
frontend/src/lib/: index.ts  stores.ts
frontend/src/lib/components/: CartItem.svelte  Navbar.svelte  PrinterConfig.svelte  ProductCard.svelte
frontend/src/lib/data/: menu.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/menu/: +page.svelte
frontend/src/routes/settings/: +page.svelte
tauri-rust/: .env  Cargo.toml  build.rs  tauri.conf.json
tauri-rust/src/: auth.rs  database.rs  main.rs  menu.rs  orders.rs  printer.rs
