[package]
name = "pot-cafe-pos"
version = "0.1.0"
description = "Pot Cafe Point of Sale System"
authors = ["Pot Cafe"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid" ] }
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
